# toon-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/toon_mcp/: __init__.py  codec.py  server.py
tests/: test_codec.py
